--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <div class="container">
         <div class="topnav">
-          <a href="https://gracious-bell-6c82a7.netlify.app">Home</a>
-          <a href="#news">News</a>
-          <a href="#contact">Contact</a>
-          <a href="#about">About</a>
+          <a href="https://jovial-beaver-4cecf1.netlify.app/">Home</a>
+              <a href="https://elated-stonebraker-c2f06d.netlify.app/">Outside</a>
+              <a href="https://compassionate-beaver-941477.netlify.app/">Closer</a>
+              <a href="https://sleepy-stonebraker-dcf4f3.netlify.app/">Inside</a>
         </div>
       </div>
 
